remove header and footer

--- a/index.html
+++ b/index.html
@@ -1,92 +1,108 @@
 <!doctype html>
 <html lang="en">
 
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <!-- Change Title and Meta tags-->
-        <title>Superern | Ern Gregorio</title>
-        <!-- <base href="/superern.github.io/"> -->
-        <meta name="description" content="Ern Gregorio, your full stack web developer">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <!-- Favicon -->
-        <link rel="icon" href="assets/images/superern.png">
-        <!-- Plugins CSS -->
-        <link rel="stylesheet" href="assets/plugins/dist/css/plugins.min.css" />
-        <!-- Main Template CSS -->
-        <link rel="stylesheet" href="assets/css/home-vr-glass.css" id="zero_color" />
-        <!-- Style Switch CSS -->
-        <link rel="stylesheet" href="zero-styleswitch/style.css" />
-    </head>
+<head>
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <!-- Change Title and Meta tags-->
+    <title>Superern | Ern Gregorio</title>
+    <!-- <base href="/superern.github.io/"> -->
+    <meta name="description" content="Ern Gregorio, your full stack web developer">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Favicon -->
+    <link rel="icon" href="assets/images/superern.png">
+    <!-- Plugins CSS -->
+    <link rel="stylesheet" href="assets/plugins/dist/css/plugins.min.css"/>
+    <!-- Main Template CSS -->
+    <link rel="stylesheet" href="assets/css/home-vr-glass.css" id="zero_color"/>
+    <!-- Style Switch CSS -->
+    <link rel="stylesheet" href="zero-styleswitch/style.css"/>
+</head>
 
-    <body class="transparent-header" data-spy="scroll" data-offset="75" data-target="#navbarCollapse">
-        <!-- Loader -->
-        <div id="preloader"></div>
-        <!-- Loader End-->
-        <!-- Main Wrap -->
-        <div class="wrap h-100">
-            <!-- Header -->
-            <!-- End Header -->
-            <!-- Section main banner -->
-            <section id="home" class="parallax-fixed main-banner h-100" data-stellar-background-ratio="0.5" style="background-position: 0% 0px;">
-                <div id="particles-js"></div>
-                <div class="content-table">
-                    <div class="content-middle">
-                        <div class="container">
-                            <div class="row align-items-center">
-                                <div class="col-12 text-center mx-auto wow zoomIn" data-wow-duration=".2s" data-wow-delay=".1s">
-                                    <h2 class="text-capitalize strong mt-0 text-white">Hi,  I'm</h2>
-                                    <h1 class="text-capitalize strong mt-0 text-white">Ern.</h1>
-                                    <a href="#" class="btn btn-light btn-xl btn-rounded mr-md-4 mb-4 mb-md-0 align-top"><i class="fa fa-envelope"></i> Your SUPERB Web Developer</a>
-                                    <p>Experience a superb web development with superern</p>
-                                    <!-- <a href="#" class="btn btn-light btn-xl btn-rounded mr-md-4 mb-4 mb-md-0 align-top"><i class="fa fa-play"></i> Watch Demo</a> -->
-                                </div>
+<body class="transparent-header" data-spy="scroll" data-offset="75" data-target="#navbarCollapse">
+<!-- Loader -->
+<div id="preloader"></div>
+<!-- Loader End-->
+<!-- Main Wrap -->
+<div class="wrap h-100">
+    <!-- Section main banner -->
+    <section id="home" class="parallax-fixed main-banner h-100" data-stellar-background-ratio="0.5"
+             style="background-position: 0% 0px;">
+        <div id="particles-js"></div>
+        <div class="content-table">
+            <div class="content-middle">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col-12 text-center mx-auto wow zoomIn" data-wow-duration=".2s" data-wow-delay=".1s">
+                            <h2 class="text-capitalize strong mt-0 text-white">Hi, I'm</h2>
+                            <h1 class="text-capitalize strong mt-0 text-white">Ern.</h1>
+                            <a href="mailto:superern14@gmail.com" class="btn btn-light btn-xl btn-rounded mr-md-4 mb-4 mb-md-0 align-top">
+                                <i class="fa fa-send"></i> Your <span class="font-weight-bold">SUPERB</span> Web Developer
+                            </a>
+                            <div class="align-items-center d-flex justify-content-center">
+                                <span>Experience a superb web development with superern</span>
+                                <img class="img-fluid" src="assets/images/superern.png" alt=""
+                                     style="width: 3em!important">
                             </div>
-                        </div>
-                    </div>
-
-                </div>
-            </section>
-            <!-- End Section main banner -->
-
-            <!-- Footer -->
-            <section class="footer bg-dark p-0">
-                <div class="copyright">
-                    <div class="container">
-                        <div class="row text-lg-left text-center text-dark-skin pt-3">
-                            <div class="col-12 col-lg-4">
-                                <p>Copyright <i class="fa fa-copyright"></i> 2020 Superern | All rights reserved.</p>
-                            </div>
-                            <div class="col-12 col-lg-4 text-center text-lg-center">
-                                <img src="assets/images/superern.png" class="img-fluid" alt="Superern at your service" width="50">
-                            </div>
-                            <div class="col-12 col-lg-4 text-center text-lg-right">
-                                <ul class="list-inline my-auto social">
-                                    <li class="list-inline-item pr-2"><a href="https://www.linkedin.com/in/eacgregorio/" class="" title="linkedin" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                                    <li class="list-inline-item pr-2"><a href="https://twitter.com/superern14" class="" title="facebook" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                                    <li class="list-inline-item pr-2"><a href="https://www.freelancer.com/u/eagregorio" class="" title="freelancer"><i class="fa fa-paper-plane"></i></a></li>
-                                    <li class="list-inline-item pr-2"><a href="https://github.com/superern" class="" title="upwork" target="_blank"><i class="fa fa-github"></i></a></li>
-                                    <li class="pr-0 list-inline-item pr-0"><a href="https://www.fiverr.com/superern" class="" title="fiverr" target="_blank"><i class="fa fa-globe"></i></a></li>
-                                </ul>
-                            </div>
+                            <!-- <a href="#" class="btn btn-light btn-xl btn-rounded mr-md-4 mb-4 mb-md-0 align-top"><i class="fa fa-play"></i> Watch Demo</a> -->
                         </div>
                     </div>
                 </div>
-            </section>
-            <!-- End Footer -->
+            </div>
+
         </div>
-        <!-- End Main Wrap -->
-        <!-- back to top -->
-        <a href="#" class="zero-scrolltop"><i class="fa fa-sort-asc" aria-hidden="true"></i></a>
-        <!-- jQuery Plugins JS -->
-        <script src="assets/plugins/dist/js/plugins.min.js"></script>
-        <!-- Main JS -->
-        <script src="assets/js/main.js"></script>
-        <!-- Style Switch JS -->
-        <script src="zero-styleswitch/script.js"></script>
-        <!-- Particles JS -->
-        <script src="assets/js/particles.min.js"></script>
-        <script src="assets/js/particles.js"></script>
-    </body>
+    </section>
+    <!-- End Section main banner -->
+
+    <!-- Footer -->
+    <section class="footer bg-dark p-0">
+        <div class="copyright">
+            <div class="container">
+                <div class="row text-lg-left text-center text-dark-skin pt-3">
+                    <div class="col-12 col-lg-4">
+                        <p>Copyright <i class="fa fa-copyright"></i> 2020 Superern | All rights reserved.</p>
+                    </div>
+                    <div class="col-12 col-lg-4 text-center text-lg-center">
+                        <img src="assets/images/superern.png" class="img-fluid" alt="Superern at your service"
+                             width="50">
+                    </div>
+                    <div class="col-12 col-lg-4 text-center text-lg-right">
+                        <ul class="list-inline my-auto social">
+                            <li class="list-inline-item pr-2"><a href="https://www.linkedin.com/in/eacgregorio/"
+                                                                 class="" title="linkedin" target="_blank"><i
+                                    class="fa fa-linkedin"></i></a></li>
+                            <li class="list-inline-item pr-2"><a href="https://twitter.com/superern14" class=""
+                                                                 title="facebook" target="_blank"><i
+                                    class="fa fa-twitter"></i></a></li>
+                            <li class="list-inline-item pr-2"><a href="https://www.freelancer.com/u/eagregorio" class=""
+                                                                 title="freelancer"><i
+                                    class="fa fa-paper-plane"></i></a></li>
+                            <li class="list-inline-item pr-2"><a href="https://github.com/superern" class=""
+                                                                 title="upwork" target="_blank"><i
+                                    class="fa fa-github"></i></a></li>
+                            <li class="pr-0 list-inline-item pr-0"><a href="https://www.fiverr.com/superern" class=""
+                                                                      title="fiverr" target="_blank"><i
+                                    class="fa fa-globe"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Footer -->
+</div>
+<!-- End Main Wrap -->
+<!-- back to top -->
+<a href="#" class="zero-scrolltop"><i class="fa fa-sort-asc" aria-hidden="true"></i></a>
+<!-- jQuery Plugins JS -->
+<script src="assets/plugins/dist/js/plugins.min.js"></script>
+<!-- Main JS -->
+<script src="assets/js/main.js"></script>
+<!-- Style Switch JS -->
+<script src="zero-styleswitch/script.js"></script>
+<!-- Particles JS -->
+<script src="assets/js/particles.min.js"></script>
+<script src="assets/js/particles.js"></script>
+</body>
 
 </html>
