--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <!-- Change Title and Meta tags-->
-    <title>Superern | Ern Gregorio</title>
+    <title>Superern</title>
     <!-- <base href="/superern.github.io/"> -->
-    <meta name="description" content="Ern Gregorio, your full stack web developer">
+    <meta name="description" content="Superern, your full stack web developer">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
     <link rel="icon" href="assets/images/superern.png">
