add fiverr profile

--- a/index.html
+++ b/index.html
@@ -36,12 +36,28 @@
                         <div class="col-12 text-center mx-auto wow zoomIn" data-wow-duration=".2s" data-wow-delay=".1s">
                             <h2 class="text-capitalize strong mt-0 text-white">Hi, I'm</h2>
                             <h1 class="text-capitalize strong mt-0 text-white">Ern.</h1>
-                            <a href="mailto:superern14@gmail.com" class="btn btn-light btn-xl btn-rounded mr-md-4 mb-4 mb-md-0 align-top">
-                                <i class="fa fa-send"></i> Your <span class="font-weight-bold">SUPERB</span> Web Developer
-                            </a>
+                            <!-- Put this code anywhere in the body of your page where you want the badge to show up. -->
+
+<div itemscope itemtype='http://schema.org/Person' class='fiverr-seller-widget' style='display: inline-block;'>
+     <a itemprop='url' href=https://www.fiverr.com/superern rel="nofollow" target="_blank" style='display: inline-block;'>
+        <div class='fiverr-seller-content' id='fiverr-seller-widget-content-bc15768e-2920-42f2-a0d7-8ac2085562e5' itemprop='contentURL' style='display: none;'></div>
+        <div id='fiverr-widget-seller-data' style='display: none;'>
+            <div itemprop='name' >superern</div>
+            <div itemscope itemtype='http://schema.org/Organization'><span itemprop='name'>Fiverr</span></div>
+            <div itemprop='jobtitle'>Seller</div>
+            <div itemprop='description'>+4yrs back-end developer (Laravel, SpringBoot, ASP dotnet)
++4yrs microsoft/unix/linux server administration, 
++3yrs front-end developer (vanillaJs, jQuery, vue, angular)
+</div>
+        </div>
+    </a>
+</div>
+
+<script id='fiverr-seller-widget-script-bc15768e-2920-42f2-a0d7-8ac2085562e5' src='https://widgets.fiverr.com/api/v1/seller/superern?widget_id=bc15768e-2920-42f2-a0d7-8ac2085562e5' data-config='{"category_name":"\n                                    Programming \u0026 Tech\n\n                            "}' async='true' defer='true'></script>
+
                             <div class="align-items-center d-flex justify-content-center">
                                 <span>Experience a superb web development with superern</span>
-                                <img class="img-fluid" src="assets/images/superern.png" alt=""
+                                <img class="img-fluid" src="assets/images/superern.png" alt="Superern"
                                      style="width: 3em!important">
                             </div>
                             <!-- <a href="#" class="btn btn-light btn-xl btn-rounded mr-md-4 mb-4 mb-md-0 align-top"><i class="fa fa-play"></i> Watch Demo</a> -->
