--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Superern</title>
     <!-- <base href="/superern.github.io/"> -->
     <meta name="description" content="Superern, your full stack web developer">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
     <link rel="icon" href="assets/images/superern.png">
     <!-- Plugins CSS -->
@@ -19,47 +20,75 @@
     <link rel="stylesheet" href="zero-styleswitch/style.css"/>
 </head>
 
-<body class="transparent-header" data-spy="scroll" data-offset="75" data-target="#navbarCollapse">
+<body class="transparent-header" data-spy="scroll" data-offset="75"
+      data-target="#navbarCollapse">
 <!-- Loader -->
 <div id="preloader"></div>
 <!-- Loader End-->
 <!-- Main Wrap -->
 <div class="wrap h-100">
     <!-- Section main banner -->
-    <section id="home" class="parallax-fixed main-banner h-100" data-stellar-background-ratio="0.5"
+    <section id="home" class="parallax-fixed main-banner h-100"
+             data-stellar-background-ratio="0.5"
              style="background-position: 0% 0px;">
         <div id="particles-js"></div>
         <div class="content-table">
             <div class="content-middle">
                 <div class="container">
                     <div class="row align-items-center">
-                        <div class="col-12 text-center mx-auto wow zoomIn" data-wow-duration=".2s" data-wow-delay=".1s">
-                            <h2 class="text-capitalize strong mt-0 text-white">Hi, I'm</h2>
-                            <h1 class="text-capitalize strong mt-0 text-white">Ern.</h1>
+                        <div class="col-12 text-center mx-auto wow zoomIn"
+                             data-wow-duration=".2s" data-wow-delay=".1s">
+                            <h2 class="text-capitalize strong mt-0 text-white">
+                                Hi, I'm</h2>
+                            <h1 class="text-capitalize strong mt-0 text-white">
+                                Ern.</h1>
                             <!-- Put this code anywhere in the body of your page where you want the badge to show up. -->
                             <div>
-                                <iframe src="https://www.fiverr.com/anywhere/anywhere_widget/610d64ad27d2d9000cecbe22" width="190" height="75" frameBorder="0" scrolling="no">
+                                <iframe src="https://www.fiverr.com/anywhere/anywhere_widget/610d64ad27d2d9000cecbe22"
+                                        width="190" height="75" frameBorder="0"
+                                        scrolling="no">
                             </div>
-<div itemscope itemtype='http://schema.org/Person' class='fiverr-seller-widget' style='display: inline-block;'>
-     <a itemprop='url' href=https://www.fiverr.com/superern rel="nofollow" target="_blank" style='display: inline-block;'>
-        <div class='fiverr-seller-content' id='fiverr-seller-widget-content-bc15768e-2920-42f2-a0d7-8ac2085562e5' itemprop='contentURL' style='display: none;'></div>
-        <div id='fiverr-widget-seller-data' style='display: none;'>
-            <div itemprop='name' >superern</div>
-            <div itemscope itemtype='http://schema.org/Organization'><span itemprop='name'>Fiverr</span></div>
-            <div itemprop='jobtitle'>Seller</div>
-            <div itemprop='description'>+4yrs back-end developer (Laravel, SpringBoot, ASP dotnet)
-+4yrs microsoft/unix/linux server administration, 
-+3yrs front-end developer (vanillaJs, jQuery, vue, angular)
-</div>
-        </div>
-    </a>
-</div>
+                            <div itemscope itemtype='http://schema.org/Person'
+                                 class='fiverr-seller-widget'
+                                 style='display: inline-block;'>
+                                <a itemprop='url'
+                                   href=https://www.fiverr.com/superern
+                                   rel="nofollow" target="_blank"
+                                   style='display: inline-block;'>
+                                    <div class='fiverr-seller-content'
+                                         id='fiverr-seller-widget-content-bc15768e-2920-42f2-a0d7-8ac2085562e5'
+                                         itemprop='contentURL'
+                                         style='display: none;'></div>
+                                    <div id='fiverr-widget-seller-data'
+                                         style='display: none;'>
+                                        <div itemprop='name'>superern</div>
+                                        <div itemscope
+                                             itemtype='http://schema.org/Organization'>
+                                            <span itemprop='name'>Fiverr</span>
+                                        </div>
+                                        <div itemprop='jobtitle'>Seller</div>
+                                        <div itemprop='description'>+4yrs
+                                            back-end developer (Laravel,
+                                            SpringBoot, ASP dotnet)
+                                            +4yrs microsoft/unix/linux server
+                                            administration,
+                                            +3yrs front-end developer
+                                            (vanillaJs, jQuery, vue, angular)
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
 
-<script id='fiverr-seller-widget-script-bc15768e-2920-42f2-a0d7-8ac2085562e5' src='https://widgets.fiverr.com/api/v1/seller/superern?widget_id=bc15768e-2920-42f2-a0d7-8ac2085562e5' data-config='{"category_name":"\n                                    Programming \u0026 Tech\n\n                            "}' async='true' defer='true'></script>
+                            <script id='fiverr-seller-widget-script-bc15768e-2920-42f2-a0d7-8ac2085562e5'
+                                    src='https://widgets.fiverr.com/api/v1/seller/superern?widget_id=bc15768e-2920-42f2-a0d7-8ac2085562e5'
+                                    data-config='{"category_name":"\n                                    Programming \u0026 Tech\n\n                            "}'
+                                    async='true' defer='true'></script>
 
                             <div class="align-items-center d-flex justify-content-center">
                                 <span>Experience a superb web development with superern</span>
-                                <img class="img-fluid" src="assets/images/superern.png" alt="Superern"
+                                <img class="img-fluid"
+                                     src="assets/images/superern.png"
+                                     alt="Superern"
                                      style="width: 3em!important">
                             </div>
                             <!-- <a href="#" class="btn btn-light btn-xl btn-rounded mr-md-4 mb-4 mb-md-0 align-top"><i class="fa fa-play"></i> Watch Demo</a> -->
@@ -78,28 +107,38 @@
             <div class="container">
                 <div class="row text-lg-left text-center text-dark-skin pt-3">
                     <div class="col-12 col-lg-4">
-                        <p>Copyright <i class="fa fa-copyright"></i> 2020 Superern | All rights reserved.</p>
+                        <p>Copyright <i class="fa fa-copyright"></i> 2020
+                            Superern | All rights reserved.</p>
                     </div>
                     <div class="col-12 col-lg-4 text-center text-lg-center">
-                        <img src="assets/images/superern.png" class="img-fluid" alt="Superern at your service"
+                        <img src="assets/images/superern.png" class="img-fluid"
+                             alt="Superern at your service"
                              width="50">
                     </div>
                     <div class="col-12 col-lg-4 text-center text-lg-right">
                         <ul class="list-inline my-auto social">
-                            <li class="list-inline-item pr-2"><a href="https://www.linkedin.com/in/eacgregorio/"
-                                                                 class="" title="linkedin" target="_blank"><i
+                            <li class="list-inline-item pr-2"><a
+                                    href="https://www.linkedin.com/in/eacgregorio/"
+                                    class="" title="linkedin" target="_blank"><i
                                     class="fa fa-linkedin"></i></a></li>
-                            <li class="list-inline-item pr-2"><a href="https://twitter.com/superern14" class=""
-                                                                 title="facebook" target="_blank"><i
+                            <li class="list-inline-item pr-2"><a
+                                    href="https://twitter.com/superern14"
+                                    class=""
+                                    title="facebook" target="_blank"><i
                                     class="fa fa-twitter"></i></a></li>
-                            <li class="list-inline-item pr-2"><a href="https://www.freelancer.com/u/eagregorio" class=""
-                                                                 title="freelancer"><i
+                            <li class="list-inline-item pr-2"><a
+                                    href="https://www.freelancer.com/u/eagregorio"
+                                    class=""
+                                    title="freelancer"><i
                                     class="fa fa-paper-plane"></i></a></li>
-                            <li class="list-inline-item pr-2"><a href="https://github.com/superern" class=""
-                                                                 title="upwork" target="_blank"><i
+                            <li class="list-inline-item pr-2"><a
+                                    href="https://github.com/superern" class=""
+                                    title="upwork" target="_blank"><i
                                     class="fa fa-github"></i></a></li>
-                            <li class="pr-0 list-inline-item pr-0"><a href="https://www.fiverr.com/superern" class=""
-                                                                      title="fiverr" target="_blank"><i
+                            <li class="pr-0 list-inline-item pr-0"><a
+                                    href="https://www.fiverr.com/superern"
+                                    class=""
+                                    title="fiverr" target="_blank"><i
                                     class="fa fa-globe"></i></a></li>
                         </ul>
                     </div>
@@ -111,7 +150,8 @@
 </div>
 <!-- End Main Wrap -->
 <!-- back to top -->
-<a href="#" class="zero-scrolltop"><i class="fa fa-sort-asc" aria-hidden="true"></i></a>
+<a href="#" class="zero-scrolltop"><i class="fa fa-sort-asc"
+                                      aria-hidden="true"></i></a>
 <!-- jQuery Plugins JS -->
 <script src="assets/plugins/dist/js/plugins.min.js"></script>
 <!-- Main JS -->
