--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Section main banner -->
     <section id="home" class="parallax-fixed main-banner h-100"
              data-stellar-background-ratio="0.5"
-             style="background-position: 0% 0px;">
+             style="background-position: 0 0; overflow-y:auto">
         <div id="particles-js"></div>
         <div class="content-table">
             <div class="content-middle">
@@ -43,11 +43,6 @@
                             <h1 class="text-capitalize strong mt-0 text-white">
                                 Ern.</h1>
                             <!-- Put this code anywhere in the body of your page where you want the badge to show up. -->
-                            <div>
-                                <iframe src="https://www.fiverr.com/anywhere/anywhere_widget/610d64ad27d2d9000cecbe22"
-                                        width="190" height="75" frameBorder="0"
-                                        scrolling="no">
-                            </div>
                             <div itemscope itemtype='http://schema.org/Person'
                                  class='fiverr-seller-widget'
                                  style='display: inline-block;'>
@@ -58,34 +53,21 @@
                                     <div class='fiverr-seller-content'
                                          id='fiverr-seller-widget-content-bc15768e-2920-42f2-a0d7-8ac2085562e5'
                                          itemprop='contentURL'
-                                         style='display: none;'></div>
-                                    <div id='fiverr-widget-seller-data'
                                          style='display: none;'>
-                                        <div itemprop='name'>superern</div>
-                                        <div itemscope
-                                             itemtype='http://schema.org/Organization'>
-                                            <span itemprop='name'>Fiverr</span>
-                                        </div>
-                                        <div itemprop='jobtitle'>Seller</div>
-                                        <div itemprop='description'>+4yrs
-                                            back-end developer (Laravel,
-                                            SpringBoot, ASP dotnet)
-                                            +4yrs microsoft/unix/linux server
-                                            administration,
-                                            +3yrs front-end developer
-                                            (vanillaJs, jQuery, vue, angular)
-                                        </div>
                                     </div>
                                 </a>
                             </div>
-
-                            <script id='fiverr-seller-widget-script-bc15768e-2920-42f2-a0d7-8ac2085562e5'
-                                    src='https://widgets.fiverr.com/api/v1/seller/superern?widget_id=bc15768e-2920-42f2-a0d7-8ac2085562e5'
-                                    data-config='{"category_name":"\n                                    Programming \u0026 Tech\n\n                            "}'
-                                    async='true' defer='true'></script>
+                            <div>
+                                <iframe src="https://www.fiverr.com/anywhere/anywhere_widget/610d64ad27d2d9000cecbe22"
+                                        width="190" height="75" frameBorder="0"
+                                        scrolling="no"></iframe>
+                            </div>
+                            <div>
+                                <img src="https://api.accredible.com/v1/frontend/credential_website_embed_image/badge/36378855" alt="API Security Badge">
+                            </div>
 
                             <div class="align-items-center d-flex justify-content-center">
-                                <span>Experience a superb web development with superern</span>
+                                <span>Experience superb web development with superern</span>
                                 <img class="img-fluid"
                                      src="assets/images/superern.png"
                                      alt="Superern"
@@ -161,6 +143,11 @@
 <!-- Particles JS -->
 <script src="assets/js/particles.min.js"></script>
 <script src="assets/js/particles.js"></script>
+<script id='fiverr-seller-widget-script-bc15768e-2920-42f2-a0d7-8ac2085562e5'
+        src='https://widgets.fiverr.com/api/v1/seller/superern?widget_id=bc15768e-2920-42f2-a0d7-8ac2085562e5'
+        data-config='{"category_name":"\n                                    Programming \u0026 Tech\n\n                            "}'
+        async='true' defer='true'></script>
+
 </body>
 
 </html>
